@@ -48,6 +48,7 @@ namespace OpenTween.Setting.Panel
             this.BrowserPathText.Text = settingLocal.BrowserPath;
             this.CheckCloseToExit.Checked = settingCommon.CloseToExit;
             this.CheckMinimizeToTray.Checked = settingCommon.MinimizeToTray;
+            this.CheckEnableTwitterV2Api.Checked = settingCommon.EnableTwitterV2Api;
             this.CheckFavRestrict.Checked = settingCommon.RestrictFavCheck;
             this.chkReadOwnPost.Checked = settingCommon.ReadOwnPost;
             this.CheckReadOldPosts.Checked = settingCommon.ReadOldPosts;
@@ -90,6 +91,7 @@ namespace OpenTween.Setting.Panel
             settingLocal.BrowserPath = this.BrowserPathText.Text.Trim();
             settingCommon.CloseToExit = this.CheckCloseToExit.Checked;
             settingCommon.MinimizeToTray = this.CheckMinimizeToTray.Checked;
+            settingCommon.EnableTwitterV2Api = this.CheckEnableTwitterV2Api.Checked;
             settingCommon.RestrictFavCheck = this.CheckFavRestrict.Checked;
             settingCommon.ReadOwnPost = this.chkReadOwnPost.Checked;
             settingCommon.ReadOldPosts = this.CheckReadOldPosts.Checked;
