@@ -2,6 +2,9 @@
 
 ==== Unreleased
  * NEW: 発言詳細部の日時ラベルをクリックするとWebブラウザを起動してツイートを表示する機能を追加
+ * NEW: 設定画面に「Twitter API v2 の使用を有効にする」のチェックボックスを追加
+   - デフォルトで API v2 が有効となり、通常は変更する必要はありません
+   - Twitter の API キーを独自に書き換えている場合で、Project への移行を完了できていない等の理由で API v2 を使用できない時はチェックを外してください
  * CHG: 発言詳細部の名前ラベルを投稿者とRTしたユーザーで分けずに表示するように変更
  * FIX: タブの移動後に発言一覧が空の表示になる不具合を修正
  * FIX: 読み込み中の待機ダイアログを表示する際にエラーが発生する不具合を修正
